.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/similar-2.7.0/src/snapshots/similar__udiff__unified_diff.snap
---
source: src/udiff.rs
expression: "&diff.unified_diff().header(\"a.txt\", \"b.txt\").to_string()"
---
--- a.txt
+++ b.txt
@@ -16,7 +16,7 @@
 p
 q
 r
-s
+S
 t
 u
 v
@@ -38,7 +38,7 @@
 L
 M
 N
-O
+o
 P
 Q
 R

