.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/similar-2.7.0/src/snapshots/similar__udiff__unified_diff_newline_hint-2.snap
---
source: src/udiff.rs
expression: "&diff.unified_diff().missing_newline_hint(false).header(\"a.txt\",\n                                                        \"b.txt\").to_string()"
---
--- a.txt
+++ b.txt
@@ -1 +1 @@
-a
+b

