.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/similar-2.7.0/src/snapshots/similar__udiff__unified_diff_newline_hint.snap
---
source: src/udiff.rs
expression: "&diff.unified_diff().header(\"a.txt\", \"b.txt\").to_string()"
---
--- a.txt
+++ b.txt
@@ -1 +1 @@
-a
+b
\ No newline at end of file

